--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,27 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/solusoft?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+
 spring.datasource.username=root
 spring.datasource.password=mlopezl53
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# mostrar sentencias SQL en la consola
+#spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# hibernate genera SQL optimizado
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = update
+
 logging.level.org.hibernate.SQL=debug
 
-spring.jackson.time-zone=America/Guatemala
-spring.jackson.locale=es_GT
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+#spring.jackson.time-zone=America/Guatemala
+#spring.jackson.locale=es_GT
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+
+# security
+jwt.secret = secret
+jwt.expiration = 36000
