--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,21 @@
-spring.datasource.url=jdbc:mysql://localhost/solusoft?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.url=jdbc:mysql://localhost/mastercontroller?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 
 spring.datasource.username=root
-spring.datasource.password=mlopezl53
-
-# mostrar sentencias SQL en la consola
-#spring.jpa.show-sql = true
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # hibernate genera SQL optimizado
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-
-spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=debug
 
-#spring.jackson.time-zone=America/Guatemala
-#spring.jackson.locale=es_GT
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
+spring.jackson.time-zone=America/Guatemala
+spring.jackson.locale=es_GT
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # security
 jwt.secret = secret
